hphp/test/quick/record-alias-prop-error.php.expectf
Catchable fatal error: Property 'C::f' declared as type Baz, Foo assigned in %s/record-alias-prop-error.php on line 21
